--- a/src/ClientInput.form
+++ b/src/ClientInput.form
@@ -16,7 +16,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <margin top="2" left="2" bottom="2" right="2"/>
+        </properties>
       </component>
       <component id="f1886" class="javax.swing.JButton" binding="button">
         <constraints>
